@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-08-22T00:59:32Z",
+  "timestamp" : "2025-08-27T00:58:45Z",
   "count_outdated" : 106,
   "uniques_outdated" : 88,
-  "count" : 109,
-  "uniques" : 91,
+  "count" : 110,
+  "uniques" : 92,
   "clones" : [
     {
       "timestamp": "2025-08-14T00:00:00Z",
@@ -25,6 +25,15 @@
     },
     {
       "timestamp": "2025-08-17T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-08-26T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
